# RegistrationService

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
docs/: password-checker.md  run-db.md
include/: ArgParser.hpp  Client.hpp  Command.hpp  Config.h.in  PasswordChecker.hpp  Query.hpp
settings/: commands.json  password_requirements.json
src/: ArgParser.cpp  Client.cpp  Command.cpp  PasswordChecker.cpp  Query.cpp
